deploy: 28fcdc9080b60412e4d82862e20b2efc8d4e567c

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 <!-- Umami Analytics -->
 
-  <script async defer data-website-id="09919b07-715a-4f4b-85ba-04da500ec663" src="https://martinb.dev/umami.js"></script>
+  <script async defer data-website-id="09919b07-715a-4f4b-85ba-04da500ec663" src="https://analytics.umami.is/script.js"></script>
 
 <!-- Disqus Comments -->
 
